# diesel-mssql

./: .env.sample  .gitignore  Cargo.toml  README.md
src/: lib.rs
src/mssql/: backend.rs  mod.rs  query_builder.rs  value.rs
src/mssql/connection/: bind_collector.rs  cursor.rs  load_connection.rs  mod.rs  raw.rs  row.rs  setup_migration_table.sql  transaction.rs  transaction_manager.rs
src/mssql/query_builder/: concat.rs  limit_offset.rs  mod.rs  select.rs
src/mssql/types/: dates.rs  mod.rs  primitives.rs
src/tests/: complex_table.rs  mod.rs  schemas.rs  simple_things.rs  tests.rs
tests/: .env.sample  Cargo.toml  README.md
tests/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
tests/migrations/20170209180355_add_one_off_tables_from_integration_tests/: down.sql  up.sql
tests/tests/: alias.rs  annotations.rs  associations.rs  boxed_queries.rs  combination.rs  custom_types.rs  delete.rs  deserialization.rs  distinct.rs  filter.rs  filter_operator.rs  find.rs  group_by.rs  joins.rs  lib.rs  limit_offset.rs  order.rs  select.rs  transactions.rs  types.rs  update.rs
tests/tests/schema/: backend_specifics.rs  mod.rs  mssql_schema.rs
tests/tests/schema_dsl/: functions.rs  mod.rs  structures.rs
