[package]
name = "diesel_mssql"
authors = ["Delfi Sehidic"]
license = "MIT OR Apache-2.0"
description = "a SQL Server database adapter for Diesel based on Tiberius"
readme = "README.md"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", optional = true }
diesel = { version = "2.2.8", default-features = false, features = [
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
] }

tiberius = { version = "0.12.3" }
tokio = { version = "1.4.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["compat"] }

[dev-dependencies]
dotenvy = "0.15.7"

[features]
default = ["chrono"]
chrono = ["dep:chrono", "diesel/chrono", "tiberius/chrono"]

[workspace]
members = [".", "tests"]
