[package]
name = "tests"
version = "0.1.0"
edition = "2021"
autotests = false
publish = false

[dependencies]
bigdecimal = "0.4.7"
chrono = "0.4.39"
diesel = { version = "2.2.7", default_features = false, features = [
    "i-implement-a-third-party-backend-and-opt-into-breaking-changes",
    "chrono",
] }
diesel_migrations = { version = "2.2.0" }

diesel_mssql = { path = "../" }
dotenvy = "0.15.7"

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
